--- a/Aboutme/app/src/main/res/layout/fragment_info_short.xml
+++ b/Aboutme/app/src/main/res/layout/fragment_info_short.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/short_info_fragment"
+    android:padding="@dimen/padding16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
